--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             <div class="detail-box">
               <h1>
                 Scuba classes,<br />
-                Scuba certifcation,<br>
+                Scuba certification,<br>
                 Private scuba dives,<br>
-                Group scuab dives,<br />
+                Group scuba dives,<br />
                 Sea or cenotes dives<br />
                 many years of experience!
               </h1>
@@ -103,7 +103,7 @@
                Experience the wonders of the underwater world with one of Cozumel's best Jorge Scuba, where my professional, experience as guide and certified scuba instructor ensures every dive is unforgettable. Located in the stunning waters of Cozumel, Mexico, my services cater to divers of all skill levels, providing personalized instruction and expert knowledge of the area’s vibrant marine life and spectacular reefs. Whether you're exploring the famous Palancar Reef or the majestic walls of Santa Rosa, my dedicated guide guarantees a safe, educational, and exhilarating diving experience in one of the world’s premier diving destinations.
               </p>
               <a href="">
-                  Call : +52 (987) 103-0520 <i>to schedule a dive or lesson</i>
+                  Call : +52 (987) 103-0520 <br/><i>to schedule a dive or lesson</i>
               </a>
             </div>
           </div>
