--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                       <i class="fa fa-map-marker" aria-hidden="true"></i>
                     </div>
                     <p>
-                      Fairfield, California
+                      Cozumel, Mexico
                     </p>
                   </div>
                 </a>
