--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
     </div>
     <div class="social-box">
       <h4>
-        Follow Us
+        Follow Jorge
       </h4>
       <div class="box">
         <a href="">
